Add section services with styles

--- a/index.html
+++ b/index.html
@@ -32,5 +32,51 @@
             	</div>
             </div>
         </header>
+        <section class="services">
+        	<div class="container">
+        		<div class="row">
+        			<h3 class="title">SERVICES</h3>
+        		</div>
+        		<div class="row">
+        			<p class="subtitle">Proin iaculis purus consequat sem cure.</p>
+        		</div>
+        		<div class="row">
+        			<div class="services-card col-4">
+        				<i class="fas fa-shopping-basket"></i>
+        				<h4>E-commerce</h4>
+        				<p>Proin iaculis purus consequat sem cure 
+						digni ssim. Donec porttitora entum suscipit 
+						aenean rhoncus posuere odio in tincidunt.</p>
+        			</div>
+        			<div class="services-card col-4">
+        				<i class="fas fa-laptop-code"></i>
+        				<h4>E-commerce</h4>
+        				<p>Proin iaculis purus consequat sem cure 
+						digni ssim. Donec porttitora entum suscipit 
+						aenean rhoncus posuere odio in tincidunt.</p>
+        			</div>
+        			<div class="services-card col-4">
+        				<i class="fas fa-lock"></i>
+        				<h4>E-commerce</h4>
+        				<p>Proin iaculis purus consequat sem cure 
+						digni ssim. Donec porttitora entum suscipit 
+						aenean rhoncus posuere odio in tincidunt.</p>
+        			</div>
+        		</div>
+        	</div>
+        </section>
+        <section class="portfolio">
+        	<div class="container">
+        		<div class="row">
+        			<h3 class="title">PORTFOLIO</h3>
+        		</div>
+        		<div class="row">
+        			<p class="subtitle">Proin iaculis purus consequat sem cure.</p>
+        		</div>
+        		<div class="row">
+        			TTT
+        		</div>
+        	</div>
+        </section>
     </body>
 </html>
