Add images, page sections with styles

--- a/index.html
+++ b/index.html
@@ -68,15 +68,73 @@
         <section class="portfolio">
         	<div class="container">
         		<div class="row">
-        			<h3 class="title">PORTFOLIO</h3>
+        			<h3 class="title">OUR PORTFOLIO</h3>
         		</div>
         		<div class="row">
         			<p class="subtitle">Proin iaculis purus consequat sem cure.</p>
         		</div>
         		<div class="row">
-        			TTT
+        			<div class="portfolio-card col-4">
+        				<img src="/images/portfolio1.jpg">
+        				<div class="portfolio-description">
+        					<h5>Ebony & Ivory</h5>
+        					<p>Branding</p>
+        				</div>
+        			</div>
+        			<div class="portfolio-card col-4">
+        				<img src="/images/portfolio2.jpg">
+        				<div class="portfolio-description">
+        					<h5>Smart Stationary</h5>
+        					<p>Print Design</p>
+        				</div>
+        			</div>
+        			<div class="portfolio-card col-4">
+        				<img src="/images/portfolio3.jpg">
+        				<div class="portfolio-description">
+        					<h5>Clever Poster</h5>
+        					<p>Print Design</p>
+        				</div>
+        			</div>
+        		</div>
+        		<div class="row">
+        			<div class="portfolio-card col-4">
+        				<img src="/images/portfolio4.jpg">
+        				<div class="portfolio-description">
+        					<h5>Vinyl Record</h5>
+        					<p>Product Mock-Up</p>
+        				</div>
+        			</div>
+        			<div class="portfolio-card col-4">
+        				<img src="/images/portfolio5.jpg">
+        				<div class="portfolio-description">
+        					<h5>Treehouse Template</h5>
+        					<p>Web Design</p>
+        				</div>
+        			</div>
+        			<div class="portfolio-card col-4">
+        				<img src="/images/portfolio6.jpg">
+        				<div class="portfolio-description">
+        					<h5>Burned Logo</h5>
+        					<p>Branding</p>
+        				</div>
+        			</div>
         		</div>
         	</div>
         </section>
+        <footer>
+        	<div class="container">
+        		<div class="row">
+        			<div class="copyright col-4">
+        				<p>(c) Copyright 2014 FreebiesXpress.com</p>
+        			</div>
+        			<div class="social-icons col-4">
+        				<i class="fab fa-twitter"></i>
+	        			<i class="fab fa-facebook-f"></i>
+	        			<i class="fab fa-pinterest-p"></i>
+	        			<i class="fab fa-google-plus-g"></i>
+        			</div>
+        		</div>
+        	</div>
+        </footer>
     </body>
 </html>
