Add responsive styles

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Slab&display=swap" rel="stylesheet">
@@ -41,21 +42,21 @@
         			<p class="subtitle">Proin iaculis purus consequat sem cure.</p>
         		</div>
         		<div class="row">
-        			<div class="services-card col-4">
+        			<div class="services-card col-md-4">
         				<i class="fas fa-shopping-basket"></i>
         				<h4>E-commerce</h4>
         				<p>Proin iaculis purus consequat sem cure 
 						digni ssim. Donec porttitora entum suscipit 
 						aenean rhoncus posuere odio in tincidunt.</p>
         			</div>
-        			<div class="services-card col-4">
+        			<div class="services-card col-md-4">
         				<i class="fas fa-laptop-code"></i>
         				<h4>E-commerce</h4>
         				<p>Proin iaculis purus consequat sem cure 
 						digni ssim. Donec porttitora entum suscipit 
 						aenean rhoncus posuere odio in tincidunt.</p>
         			</div>
-        			<div class="services-card col-4">
+        			<div class="services-card col-md-4">
         				<i class="fas fa-lock"></i>
         				<h4>E-commerce</h4>
         				<p>Proin iaculis purus consequat sem cure 
@@ -74,21 +75,21 @@
         			<p class="subtitle">Proin iaculis purus consequat sem cure.</p>
         		</div>
         		<div class="row">
-        			<div class="portfolio-card col-4">
+        			<div class="portfolio-card col-md-4">
         				<img src="/images/portfolio1.jpg">
         				<div class="portfolio-description">
         					<h5>Ebony & Ivory</h5>
         					<p>Branding</p>
         				</div>
         			</div>
-        			<div class="portfolio-card col-4">
+        			<div class="portfolio-card col-md-4">
         				<img src="/images/portfolio2.jpg">
         				<div class="portfolio-description">
         					<h5>Smart Stationary</h5>
         					<p>Print Design</p>
         				</div>
         			</div>
-        			<div class="portfolio-card col-4">
+        			<div class="portfolio-card col-md-4">
         				<img src="/images/portfolio3.jpg">
         				<div class="portfolio-description">
         					<h5>Clever Poster</h5>
@@ -97,21 +98,21 @@
         			</div>
         		</div>
         		<div class="row">
-        			<div class="portfolio-card col-4">
+        			<div class="portfolio-card col-md-4">
         				<img src="/images/portfolio4.jpg">
         				<div class="portfolio-description">
         					<h5>Vinyl Record</h5>
         					<p>Product Mock-Up</p>
         				</div>
         			</div>
-        			<div class="portfolio-card col-4">
+        			<div class="portfolio-card col-md-4">
         				<img src="/images/portfolio5.jpg">
         				<div class="portfolio-description">
         					<h5>Treehouse Template</h5>
         					<p>Web Design</p>
         				</div>
         			</div>
-        			<div class="portfolio-card col-4">
+        			<div class="portfolio-card col-md-4">
         				<img src="/images/portfolio6.jpg">
         				<div class="portfolio-description">
         					<h5>Burned Logo</h5>
@@ -124,10 +125,10 @@
         <footer>
         	<div class="container">
         		<div class="row">
-        			<div class="copyright col-4">
+        			<div class="copyright col-md-4">
         				<p>(c) Copyright 2014 FreebiesXpress.com</p>
         			</div>
-        			<div class="social-icons col-4">
+        			<div class="social-icons col-md-4">
         				<i class="fab fa-twitter"></i>
 	        			<i class="fab fa-facebook-f"></i>
 	        			<i class="fab fa-pinterest-p"></i>
