Changed header section

--- a/index.html
+++ b/index.html
@@ -10,28 +10,32 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-    	<header class="splash">
-    		<nav>
-            	<div class="navleft">
-            		<img src="/images/logo.png">
-            	</div>
-            	<div class="navright">
-            		<ul>
-            			<li><a href="">HOME</a></li>
-            			<li><a href="">SERVICES</a></li>
-            			<li><a href="">PORTFOLIO</a></li>
-            			<li><a href="">ABOUT</a></li>
-            			<li><a href="">CONTACT</a></li>
-            		</ul>
-            	</div>
-            </nav>
-            <div class="splash-inner">
-            	<div class="home">
-	                <h1>Welcome To Our Studio!</h1>
-	                <h2>IT'S NICE TO MEET YOU</h2>
-	                <a href="" class="btn">TELL ME MORE</a>
-            	</div>
-            </div>
+        <header class="splash">
+           <div class="container">
+               <div class="row">
+                    <div class="top-menu">
+                       <div class="logo">
+                           <img src="/images/logo.png">
+                       </div>
+                       <div class="navigation">
+                            <ul>
+                                <li><a href="">HOME</a></li>
+                                <li><a href="">SERVICES</a></li>
+                                <li><a href="">PORTFOLIO</a></li>
+                                <li><a href="">ABOUT</a></li>
+                                <li><a href="">CONTACT</a></li>
+                            </ul>
+                       </div>
+                    </div>
+               </div>
+               <div class="row">
+                    <div class="home">
+                        <h1>Welcome To Our Studio!</h1>
+                        <h2>IT'S NICE TO MEET YOU</h2>
+                        <a href="" class="btn">TELL ME MORE</a>
+                    </div>
+               </div>
+           </div>
         </header>
         <section class="services">
         	<div class="container">
